@@ -1,3 +1,10 @@
+2004-02-12  Danny Smith  <dannysmith@users.sourceforge.net>
+
+	* include/basetypes.h (_REFIID_DEFINED): Correct typo.
+
+	* include/winuser.h (NCCALCSIZE_PARAMS): Define structure.
+	Thanks to Mike Nordell <tamlin at algonet dot se>.
+
 2004-02-11  Danny Smith  <dannysmith@users.sourceforge.net>
 
 	* lib/dnsapi.a: New file.
